# gestao_escolar_AHR

backend/: db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/gestao_escolar/: admin.py  apps.py  models.py  serializers.py  views.py
backend/gestao_escolar/migrations/: 0001_initial.py  0002_aula.py  0002_curso_carga_horaria.py  0002_frequencia.py  0002_professor_cpf_professor_data_nasc_professor_telefone.py  0002_remove_disciplina_professor_remove_nota_disciplina_and_more.py  0002_rename_mae_aluno_aluno_mae_and_more.py  0003_frequencia.py  0003_rename_cpf_aluno_cpf.py
fronted/: pyproject.toml
